Module_10_Container_Orchestration_Kubernetes/Create_Helm_Chart_for_Microservices/helm-mongo-express.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: mongo-express 
  labels: 
    app: mongo-express 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express 
  template:
    metadata:
      labels:
        app: monog-express 
    spec:
      containers:
      - name: mongo-express 
        image: mongo-express 
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service 
spec: 
  selector:
  app: mongo-express 
ports: 
  - protocol: TCP 
    port: 8081 
    targetPort: 8081
