Module_10_Container_Orchestration_Kubernetes/Create_Helm_Chart_for_Microservices/helm-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name:
spec: 
  ingressClassName: nginx-ingress 
  rules:
  - host: XXX
    http:
      paths:
        - path: /
          pathType: Prefix 
          backend: 
            service: 
              name: mongo-express-service 
              port: 
                number: 8081
